Delete width property in unordered list of the navigation bar to fix menu overflow caused by renaming bio to biography

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -463,7 +463,6 @@ input[type="email"],
     .navbar ul {
         align-items: center;
         margin: 0;
-        width: 385px;
         height: 50px;
     }
     
